# ecommerce_scrap

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 231c003551e3_rename_product_metadata_to_raw_metadata_.py  2fe5cdc17306_add_ux_fields.py  438c7550afd8_add_product_variant_table.py  77be2ed0f3cb_add_suggestion_engine_tables.py  95cff26e2644_initial_schema_all_tables.py  b2ce1ed92abc_add_current_price_to_product.py  dbf8d148b238_add_ai_generator_settings_table.py
docs/: 01_architecture.md  02_database_schema.md  03_workflows.md  04_legacy_rescue_plan.md  05_stack_versions.md  06_product_vision_cmo.md  07_tech_fingerprinting.md  08_pluggable_extractors.md  09_operational_flow.md  10_saas_business_model.md  AUDIT_REPORT.md  directus_ui_setup.md  implementation_plan.md.resolved  srs_mvp_competitive_intel_directus_fast_api_postgres.md  strategic_flows.md
scripts/: fix_directus_relations.py  scrape_competitor_deep.py  seed_ai_settings.py  seed_industries.py  seed_initial_data.py  seed_tiers.py  setup_directus_ux.py  setup_overnight_showcase.py  smoke_test_newsletter.py  smoke_test_web_monitor.py  update_newsletter_metrics.py  verify_ai_briefing.py  verify_api.py  verify_catalog_extraction.py  verify_extended_extractors.py  verify_premium_data.py
src/api/: main.py
src/api/routes/: ai.py  onboarding.py  suggestions.py
src/core/: config.py  database.py  models.py
src/core/ai/: base.py  factory.py  gemini.py  openai.py
src/workers/: worker_settings.py
(+26 files in other folders)
