[project]
name = "competitive-intelligence-engine"
version = "0.1.0"
description = "Motor de inteligencia competitiva para eCommerce: monitoreo web, newsletters, alertas y briefs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    # Validation & Config
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    # Background Workers
    "arq>=0.26.1",
    # Scraping
    "httpx>=0.28.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.13.3",
    # Email
    "imap-tools>=1.7.1",
    "email-validator>=2.2.0",
    # Tech Fingerprinting
    # NOTE: python-Wappalyzer is dated (2020). For deep fingerprinting we'll
    # build our own heuristics (PlatformDetector) + optionally install
    # s0md3v/wappalyzer-next from GitHub when needed:
    #   uv pip install "git+https://github.com/AliYmn/pywappalyzer"
    "pywappalyzer>=0.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "google-generativeai>=0.8.6",
    "openai>=2.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
